@@ -235,6 +235,7 @@ country_event = {
 			}
 		}
 		custom_tooltip = vn_crusade_plea.tt
+		custom_tooltip = vn_crusade_plea.tt2
 		hidden_effect = {
 			set_global_flag = vn_crusade_holy_land_flag
 			every_country = {
@@ -294,6 +295,7 @@ country_event = {
 			}
 		}
 		custom_tooltip = vn_crusade_plea.tt
+		custom_tooltip = vn_crusade_plea.tt2
 		hidden_effect = {
 			set_global_flag = vn_crusade_mesopotamia_flag
 			every_country = {
@@ -443,6 +445,7 @@ country_event = {
 			}
 		}
 		custom_tooltip = vn_crusade_plea.tt
+		custom_tooltip = vn_crusade_plea.tt2
 		hidden_effect = {
 			set_global_flag = vn_crusade_greece_flag
 			every_country = {
@@ -697,6 +700,7 @@ country_event = {
 			}
 		}
 		custom_tooltip = vn_crusade_plea.tt
+		custom_tooltip = vn_crusade_plea.tt2
 		hidden_effect = {
 			set_global_flag = vn_crusade_wendland_flag
 			every_country = {
@@ -774,6 +778,7 @@ country_event = {
 			}
 		}
 		custom_tooltip = vn_crusade_plea.tt
+		custom_tooltip = vn_crusade_plea.tt2
 		hidden_effect = {
 			set_global_flag = vn_crusade_baltic_flag
 			every_country = {
