@@ -1364,8 +1364,9 @@
  vn_crusade_events.1.i: "Crusade for France (§Y[4063.GetName]§!)"
  vn_crusade_events.1.j: "Crusade for Wendland (§Y[402.GetName]§!)"
  vn_crusade_events.1.k: "Crusade for the Baltic (§Y[5793.GetName]§!)"
- vn_crusade_events.1.l: "Crusade for Finland (§Y[3252.GetName]§!)"
+ vn_crusade_events.1.l: "Crusade for Mesopotamia (§Y[3660.GetName]§!)"
  vn_crusade_plea.tt: "All Catholic realms will hear our plea"
+ vn_crusade_plea.tt2: "If said province is conquered by the Crusaders, new Crusader states may appear."
  vn_crusade_events.2.t: "[From.GetName] Proposes Crusade"
  vn_crusade_events.2.d.a: "The Pope has sent heralds around the world requesting that all faithful Catholics aid in an attempt to drive the heathens out of Iberia and sack their erstwhile capital Córdoba. He promises that anybody who joins the expedition will receive full remission for all their sins, effectively guaranteeing their entry into heaven.\n\nHow should we respond to this plea for pious observance and self-sacrifice? If we accept the call and take up the cross, we will be committed to fighting the war in a matter of months."
  vn_crusade_events.2.d.b: "The Pope has sent heralds around the world requesting that all faithful Catholics aid in an attempt to drive the heathens out of Africa and free the ancient city of Carthage. He promises that anybody who joins the expedition will receive full remission for all their sins, effectively guaranteeing their entry into heaven.\n\nHow should we respond to this plea for pious observance and self-sacrifice? If we accept the call and take up the cross, we will be committed to fighting the war in a matter of months."
