@@ -1363,8 +1363,9 @@
  vn_crusade_events.1.i: "Kreuzzug um Frankreich (§Y[4063.GetName]§!)"
  vn_crusade_events.1.j: "Kreuzzug um das Wendland (§Y[402.GetName]§!)"
  vn_crusade_events.1.k: "Kreuzzug um das Baltikum (§Y[5793.GetName]§!)"
- vn_crusade_events.1.l: "Kreuzzug um Finnland (§Y[3252.GetName]§!)"
+ vn_crusade_events.1.l: "Kreuzzug um Mesopotamien (§Y[3660.GetName]§!)"
  vn_crusade_plea.tt: "Alle katholischen Reiche werden unsere Bitte erhören"
+ vn_crusade_plea.tt2: "Wenn die besagte Provinz von den Kreuzrittern erobert wird, können neue Kreuzritterstaaten erscheinen."
  vn_crusade_events.2.t: "[From.GetName] plant einen Kreuzzug"
  vn_crusade_events.2.d.a: "Der Papst hat Herolde in die ganze Welt gesandt, um alle gläubigen Katholiken um Hilfe bei dem Versuch zu bitten, mit der Bitte an alle gläubigen Katholiken, bei dem Versuch mitzuhelfen, die Heiden von der iberischen Halbinsel zu vertreiben und ihre frühere Hauptstadt Córdoba zu plündern. Er verspricht, dass jeder, der an der Expedition teilnimmt, vollen Erlass für alle seine Sünden erhält, wodurch sein Eintritt in den Himmel praktisch garantiert ist.\n\nWie sollten wir auf dieses Flehen um fromme Gehorsamkeit und Selbstaufopferung reagieren? Wenn wir den Aufruf akzeptieren und das Kreuz ergreifen, werden wir uns in wenigen Monaten zum Kampf verpflichten."
  vn_crusade_events.2.d.b: "Der Papst hat Herolde in die ganze Welt gesandt, um alle gläubigen Katholiken um Hilfe bei dem Versuch zu bitten, die Heiden aus Afrika zu vertreiben und die alte Stadt Karthago zu befreien. Er verspricht, dass jeder, der an der Expedition teilnimmt, vollen Erlass für alle seine Sünden erhält, wodurch sein Eintritt in den Himmel praktisch garantiert ist.\n\nWie sollten wir auf dieses Flehen um fromme Gehorsamkeit und Selbstaufopferung reagieren? Wenn wir den Aufruf akzeptieren und das Kreuz ergreifen, werden wir uns in wenigen Monaten zum Kampf verpflichten."
