@@ -19,6 +19,7 @@
 -Mediatization start event now fires for the overlord of a subject country rather than the subject themselves
 -Fragmentation of Poland should no longer restart after firing once
 -Forming Sicily as Apulia will no longer switch your mission tree
+-Improved localization for crusade events
 -Other minor localization/bug fixes
 
 # v 2.0.5 #
